--- a/index.html
+++ b/index.html
@@ -20,36 +20,11 @@ But it must have the following features:
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-<style>
-  *{
-    background:black;
-    color: #FFC700;
-  }
-  .libre-baskerville-regular {
-  font-family: "Libre Baskerville", serif;
-  font-weight: 400;
-  font-style: normal;
-  }
-  div{
-    margin-top:50px;
-    width: 50%;
-    margin-left:25%;
-  }
-  
-  img{
-    width:100%;
-    border: 5px solid #FFC700;
-  }
-  h1{
-    text-align:center;
-  }
-  p{
-    text-align:center;
-  }
-</style>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+
 </head>
 <body>
   <div>
