--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ But it must have the following features:
 <body>
   <div>
     <img src="./assets/images/dictator.jpg" alt="class room board filled with physics content">
-    <h1 class="libre-baskerville-regular">He is a Dictator</h1>
-    <p class = libre-baskerville-regular>because he doesn't do what I want.</p>
+    <h1>He is a Dictator</h1>
+    <p>because he doesn't do what I want.</p>
   </div>
 </body>
 </html>
